Add legacy auth, but need to make it accessible from config

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -3,5 +3,8 @@
     "Home": {
       "<Ctrl-c>": "Quit", // Yet another way to quit
     },
+  },
+  "config": {
+	"use_legacy_auth": true // If you need legacy authentication, 
   }
 }
