--- a/.config/config.json5
+++ b/.config/config.json5
@@ -4,7 +4,7 @@
       "<Ctrl-c>": "Quit", // Yet another way to quit
     },
   },
-  "config": {
-	"use_legacy_auth": true // If you need legacy authentication, 
-  }
+  // Use legacy authentication that sends the password instead of token and salt
+  // This may be necessary if you are using servers like Ampache, which does not support token-based authentication yet
+  "use_legacy_auth": false,
 }
