Add credential loader

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
 CARGO_MANIFEST_DIR=$(cargo metadata --format-version 1 --no-deps | jq -r '.packages[0].manifest_path' | xargs dirname)
 
-export AMPTERM_CONFIG=$CARGO_MANIFEST_DIR/.config
+export AMPTERM_CONFIG=$CARGO_MANIFEST_DIR/.myconfig
 export AMPTERM_DATA=$CARGO_MANIFEST_DIR/.data
 export AMPTERM_LOG_LEVEL=debug
