--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ lazy_static = "1.5.0"
 libc = "0.2.161"
 pretty_assertions = "1.4.1"
 ratatui = { version = "0.29.0", features = ["serde", "macros"] }
-reqwest = "0.12.15"
+reqwest = { version = "0.12.15", features = ["json"] }
 rodio = "0.20.1"
 serde = { version = "1.0.211", features = ["derive"] }
 serde_json = "1.0.132"
