--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ reqwest = { version = "0.12.15", features = ["json"] }
 rodio = "0.20.1"
 serde = { version = "1.0.211", features = ["derive"] }
 serde_json = "1.0.132"
+serde_repr = "0.1.20"
 signal-hook = "0.3.17"
 strip-ansi-escapes = "0.2.0"
 strum = { version = "0.26.3", features = ["derive"] }
