Add playlist feature

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -11,6 +11,9 @@
 	  "<g><g>": {
 		  "Local": "Top"
 	  },
+	  "<Shift-r>": {
+		  "Local": "Refresh"
+	  },
 	  "<Up>": {
 		  "Local": "Up"
 	  },
