--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
 derive_deref = "1.1.1"
 directories = "5.0.1"
 futures = "0.3.31"
+futures-util = "0.3.31"
 human-panic = "2.0.2"
 json5 = "0.4.1"
 lazy_static = "1.5.0"
@@ -37,6 +38,7 @@ serde = { version = "1.0.211", features = ["derive"] }
 serde_json = "1.0.132"
 serde_repr = "0.1.20"
 signal-hook = "0.3.17"
+stream-download = "0.19.1"
 strip-ansi-escapes = "0.2.0"
 strum = { version = "0.26.3", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["full"] }
