--- a/.config/config.json5
+++ b/.config/config.json5
@@ -44,6 +44,7 @@
 	  "<Shift-a>": {
 		  "Local": "AddLast"
 	  },
+	  "<n>": "Skip",
 	  "<Esc>":"EndKeySeq",
 	  "<s>": "Play",
 	  "<Shift-s>": "Pause"
