--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ libc = "0.2.161"
 pretty_assertions = "1.4.1"
 ratatui = { version = "0.29.0", features = ["serde", "macros"] }
 reqwest = { version = "0.12.15", features = ["json"] }
-rodio = "0.20.1"
+rodio = { version = "0.20.1", features = ["symphonia-all"] }
 serde = { version = "1.0.211", features = ["derive"] }
 serde_json = "1.0.132"
 serde_repr = "0.1.20"
