--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ lazy_static = "1.5.0"
 libc = "0.2.161"
 pretty_assertions = "1.4.1"
 ratatui = { version = "0.29.0", features = ["serde", "macros"] }
+ratatui-image = "8.0.1"
 reqwest = { version = "0.12.15", features = ["json"] }
 rodio = { version = "0.20.1", features = ["symphonia-all"] }
 serde = { version = "1.0.211", features = ["derive"] }
