--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ pretty_assertions = "1.4.1"
 ratatui = { version = "0.29.0", features = ["serde", "macros"] }
 ratatui-image = "8.0.1"
 reqwest = { version = "0.12.15", features = ["json"] }
-rodio = { version = "0.20.1", features = ["symphonia-all"] }
+rodio = { version = "0.20.1", features = ["symphonia-alac", "symphonia-flac", "symphonia-mp3", "symphonia-wav"] }
 serde = { version = "1.0.211", features = ["derive"] }
 serde_json = "1.0.132"
 serde_repr = "0.1.20"
