Visual mode message

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -1,10 +1,10 @@
 {
   "keybindings": {
-	  "Visual": {
-		  	  "<Esc>":"NormalMode"
-
-	  },
-	  "Normal": {},
+    "Visual": {
+	  "<Esc>":"NormalMode",
+	  "<v>":"NormalMode"
+    },
+	"Normal": {},
     "Common": {
 	  "<Ctrl-w><Left>": "MoveLeft",
 	  "<Ctrl-w><Right>": "MoveRight",
