--- a/.config/config.json5
+++ b/.config/config.json5
@@ -69,8 +69,8 @@
 	  "<Shift-r>": { User: { Common: "Refresh" } },
 	  "<Enter>": { User: { Common: "Confirm" } },
 	  "<q>": { User: { Common: "Cancel" } },
-	  "<Esc>":"EndKeySeq",
-    },
+	  "<Esc>": { User: { Common: "EndKeySeq" } },
+	},
   },
   // Use legacy authentication that sends the password instead of token and salt
   // This may be necessary if you are using servers like Ampache, which does not support token-based authentication yet
