--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ directories = "5.0.1"
 futures = "0.3.31"
 futures-util = "0.3.31"
 human-panic = "2.0.2"
+image = "0.25.8"
 json5 = "0.4.1"
 lazy_static = "1.5.0"
 libc = "0.2.161"
