--- a/.config/config.json5
+++ b/.config/config.json5
@@ -57,9 +57,8 @@
 	  // Music controller
 	  "<Shift-Up>": { ToPlayerWorker: { ChangeVolume: 0.05 } },
 	  "<Shift-Down>": { ToPlayerWorker: { ChangeVolume: -0.05 } },
-	  "<0>": { ToPlayerWorker: "Previous" },
+	  "<0>": { ToPlayerWorker: "GoToStart" },
 	  "<Shift-k>": { ToPlayerWorker: "Previous" },
-	  // "<^>": "GoToStart"
 	  "<$>": { ToPlayerWorker: "Skip" },
 	  "<Shift-j>": { ToPlayerWorker: "Skip" },
 	  "<c>": { ToPlayerWorker: "Continue" },
