Fix test to match with the new default keybind

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -76,6 +76,8 @@
 
 	  "<Esc>": { User: { Global: "EndKeySeq" } },
 	  "<t>": { User: { Global: "TapToBPM" } },
+
+      "<Ctrl-w><q>": "Quit",
 	},
   },
   // Use legacy authentication that sends the password instead of token and salt
