--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,9 @@ image = "0.25.8"
 json5 = "0.4.1"
 lazy_static = "1.5.0"
 libc = "0.2.161"
+md5 = "0.8.0"
 pretty_assertions = "1.4.1"
+rand = "0.9.2"
 ratatui = { version = "0.29.0", features = ["serde", "macros"] }
 ratatui-image = "8.0.1"
 regex = "1.12.2"
