--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ signal-hook = "0.3.17"
 stream-download = "0.19.1"
 strip-ansi-escapes = "0.2.0"
 strum = { version = "0.26.3", features = ["derive"] }
+tempdir = "0.3.7"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-util = "0.7.12"
 tracing = "0.1.40"
