--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ ratatui-image = "8.0.1"
 regex = "1.12.2"
 reqwest = { version = "0.12.15", features = ["json"] }
 rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-alac", "symphonia-flac", "symphonia-mp3", "symphonia-vorbis", "symphonia-wav"] }
+rusqlite = "0.37.0"
 serde = { version = "1.0.211", features = ["derive"] }
 serde_json = "1.0.132"
 serde_repr = "0.1.20"
