Remove useless stuff

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -72,6 +72,19 @@
 		},
 		"lyrics": {},
 		"playlistlist": {
+			"<k>": "Up",
+			"<j>": "Down",
+			// "<h>": "Left",
+			// "<l>": "Right",
+
+			"<Up>": "Up",
+			"<Down>": "Down",
+			// "<Left>": "Left",
+			// "<Right>": "Right",
+
+			"<Shift-g>": "Bottom",
+			"<g><g>": "Top",
+
 			"<Enter>": "ViewSelected",
 
 			"<i>": { "Add": "Front" },
@@ -93,13 +106,16 @@
     // This may be necessary if you are using servers like Ampache, which does not support token-based authentication yet
     "use_legacy_auth": false,
     "auth": {
-      "url": "echo URL",
-      "username": "echo USERNAME",
-      "password": "echo PASSWORD",
+        "url": "echo URL",
+        "username": "echo USERNAME",
+        "password": "echo PASSWORD",
     },
     "unsafe_auth": {
-      "url": "",
-      "username": "",
-      "password": "",
-    }
+        "url": "",
+        "username": "",
+        "password": "",
+    },
+	"behaviour": {
+		"auto_focus": true,
+	},
 }
